# ORAssistant

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.ci.yml  docker-compose.dev.yml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  ruff.toml
backend/: .dockerignore  .env.example  .env.test  .gitignore  Dockerfile  Dockerfile.faiss-cache  Dockerfile.faiss-cache.dockerignore  Dockerfile_slim  MCP_AGENT_TRIGGER.md  Makefile  README.md  alembic.ini  build_docs.py  chatbot.py  cli.py  main.py  mcp_server.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements-text.txt  requirements.txt  scrape_docs.py  test.ipynb
backend/data/: source_list.json
backend/data/markdown/gh_discussions/: mapping.json
backend/scripts/: build_faiss.py
backend/src/: chain.py  ensemble_chain.py  faiss_vector_retriever.py  post_install.py  server.py
backend/src/agents/: retriever_agent.py  retriever_arch.py  retriever_graph.py  retriever_mcp.py  retriever_rag.py  retriever_tools.py  retriever_typing.py  routing_tools.py  states.py
backend/src/api/: api_docs.md  dummy.py  main.py
backend/src/api/models/: response_model.py
backend/src/api/routers/: api_docs.md  chains.py  conversations.py  graphs.py  healthcheck.py  helpers.py  ui.py
backend/src/chains/: base_chain.py  bm25_retriever_chain.py  ensemble_chain.py  ensemble_retriever_chain.py  hybrid_retriever_chain.py  mmr_retriever_chain.py  multi_retriever_chain.py  similarity_retriever_chain.py
backend/src/database/: __init__.py  config.py  crud.py  models.py
backend/src/database/alembic/: env.py
backend/src/dataset_gen_eval/: eval_dataset.py  generate_qa_pairs.py  ingest_doc.py  quality_agents.py
backend/src/mcp/client/: client.py
backend/src/mcp/server/: exec_server.py  orfs_server.py
backend/src/openroad_mcp/client/: client.py
backend/src/prompts/: answer_prompts.py  prompt_templates.py  tool_examples.py
backend/src/tools/: chunk_documents.py  format_docs.py  process_html.py  process_json.py  process_md.py  process_pdf.py  recursive_chunk.py  scrape_docs.py
backend/src/vectorstores/: faiss.py
backend/tests/: README.md  conftest.py  test_api_conversations_streaming.py  test_api_healthcheck.py  test_api_helpers.py  test_base_chain.py  test_bm25_retriever_chain.py  test_build_docs.py  test_chunk_documents.py  test_database_config.py  test_database_crud.py  test_faiss_vectorstore.py  test_format_docs.py  test_hybrid_retriever_chain.py  test_mmr_retriever_chain.py  test_multi_retriever_chain.py  test_orfs_base.py  test_orfs_make.py  test_orfs_rag.py  test_process_html.py  test_process_json.py  test_process_md.py  test_process_pdf.py  test_prompt_templates.py  test_retriever_graph_simplified.py  test_retriever_tools.py  test_retriever_typing.py  test_similarity_retriever_chain.py
backend/tests/data/: sample.md
evaluation/: Makefile  README.md  init_google.py  llm_tests_output.txt  pyproject.toml  requirements-test.txt  requirements.txt
evaluation/auto_evaluation/: README.md  content_metrics.json  demo.py  eval_main.py  llm_tests.sh  retrieval_metrics.json
evaluation/auto_evaluation/chainforge_autoeval/: ._Gemini 1.5 Pro Wrapper.py  ._Or Assistant.py  ._evaluation_workflow.cforge  ._readme.md  Gemini 1.5 Pro Wrapper.py  Or Assistant.py  evaluation_workflow.cforge  readme.md
evaluation/auto_evaluation/dataset/: hf_pull.py  preprocess.py
evaluation/auto_evaluation/script_based/: .env_example  data.csv  eval_benchmark.py  readme.md
evaluation/auto_evaluation/src/metrics/: accuracy.py  content.py  geval.py  retrieval.py
evaluation/auto_evaluation/src/models/: gemini.py  vertex_ai.py
evaluation/auto_evaluation/tests/: test_metrics.py
evaluation/human_evaluation/: .env_example  README.md  main.py  readme.md  requirements.txt  setup.py
evaluation/human_evaluation/utils/: api.py  sheets.py  utils.py
evaluation/script_based_evaluation/: .env.sample  README.md  analysis.py  main.py  requirements.txt
evaluation/script_based_evaluation/config/: config.py
evaluation/script_based_evaluation/models/: gemini_model.py  gpt_model.py
evaluation/script_based_evaluation/utils/: api_utils.py  data_utils.py  logging_utils.py  resume_utils.py
frontend/: .dockerignore  .env.example  .env_example   Dockerfile  Makefile  README.md  mongoDB.md  mypy.ini  pyproject.toml  readme.md  requirements-test.txt  requirements.txt  ruff.toml  streamlit_app.py
frontend/mock-flask-api/: .env.example  Makefile  app.py  pyproject.toml  readme.md
frontend/nextjs-frontend/: .env.example  .env_example  Dockerfile  README.md  apiproxy.py  eslint.config.mjs  next.config.mjs  package-lock.json  package.json  prettier.config.js  requirements.txt  tailwind.config.js  tailwind.config.ts
frontend/nextjs-frontend/app/: globals.css  layout.tsx  notfound.tsx  page.tsx
frontend/nextjs-frontend/app/api/: chat.ts
frontend/nextjs-frontend/components/: ChatHistory.tsx  CopyButton.tsx  Header.tsx  MessageList.tsx  SourceList.tsx  SuggestedQuestions.tsx
frontend/nextjs-frontend/hooks/: useWindowSize.ts
frontend/nextjs-frontend/orassistant-chat/: .env_example  package.json  tailwind.config.js  tailwind.config.ts
frontend/nextjs-frontend/orassistant-chat/app/: globals.css  layout.tsx  notfound.tsx  page.tsx
frontend/nextjs-frontend/orassistant-chat/components/: ChatHistory.tsx  Header.tsx  MessageList.tsx  SourceList.tsx  SuggestedQuestions.tsx
frontend/nextjs-frontend/orassistant-chat/hooks/: useWindowSize.ts
frontend/nextjs-frontend/styles/: markdown-table.css
frontend/nextjs_frontend/: readme.md
frontend/nextjs_frontend/orassistant-frontend/: .env_example  apiproxy.py  next.config.mjs  package-lock.json  package.json
frontend/nextjs_frontend/orassistant-frontend/app/: page.tsx  (+1 more)
frontend/streamlit_frontend/: .env_example  README.md  requirements-test.txt  requirements.txt  streamlit_app.py
frontend/streamlit_frontend/utils/: mock_endpoint.py
frontend/utils/: feedback.py  mock_endpoint.py  mongo_client.py
(+1857 files in other folders)
