[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu==1.12.0",
    "fastapi==0.116.1",
    "fastmcp>=2.12.2",
    "huggingface-hub[cli]==0.34.4",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-google-genai==2.1.9",
    "langchain-google-vertexai==2.0.28",
    "langchain-huggingface==0.3.1",
    "langchain-mcp-adapters>=0.1.9",
    "langchain-ollama==0.3.6",
    "langgraph==0.6.6",
    "markdown==3.8.2",
    "myst-parser==4.0.1",
    "nltk==3.9.1",
    "openai==1.100.2",
    "pypdf==6.0.0",
    "rank-bm25==0.2.2",
    "sentence-transformers>=5.1.0",
    "sphinx==8.1.3",
    "sphinx-autobuild==2024.10.3",
    "sphinx-book-theme==1.1.4",
    "sphinx-copybutton==0.5.2",
    "sphinx-external-toc==1.0.1",
    "sphinxcontrib-mermaid==1.0.0",
    "unstructured==0.18.13",
]

[dependency-groups]
dev = [
    "beautifulsoup4==4.12.3",
    "mypy>=1.17.1",
    "pre-commit==3.7.1",
    "pytest==8.3.2",
    "pytest-asyncio==0.23.8",
    "pytest-cov==5.0.0",
    "pytest-html==4.1.1",
    "pytest-xdist==3.6.0",
    "ruff==0.5.1",
    "types-beautifulsoup4==4.12.0.20240511",
    "types-markdown==3.6.0.20240316",
    "types-requests==2.32.0.20240622",
    "types-tqdm==4.66.0.20240417",
]

[tool.pytest.ini_options]
pythonpath = ["."]
